[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "certberus"
version = "0.1.0"
description = "A Python-native tool for managing locally-trusted SSL certificates."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "LGPL-3.0-or-later"}
authors = [
    {name = "Fco. Ivan Romero Guzman"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Security :: Cryptography",
    "Intended Audience :: Developers",
]
dependencies = [
    "cryptography>=42.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "InquirerPy>=0.3.0",
    "toml>=0.10.0"
]

[project.optional-dependencies]
# BD local SQLite (recomendado por defecto)
db = ["sqlmodel>=0.0.18", "aiosqlite>=0.19"]
# BD PostgreSQL (infraestructura grande / OmniWISP)
db-postgres = ["sqlmodel>=0.0.18", "asyncpg>=0.29"]
# API REST vía FastAPI
api = ["fastapi>=0.100.0", "uvicorn>=0.23.0"]
# Todas las funcionalidades juntas
full = ["sqlmodel>=0.0.18", "aiosqlite>=0.19", "asyncpg>=0.29", "fastapi>=0.100.0", "uvicorn>=0.23.0"]
# Tests
test = ["pytest>=7.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
certberus = "certberus.cli:app"

[tool.setuptools.packages.find]
include = ["certberus*"]
